force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/Apttus_Billing__GatewayTransaction__c.object-meta.xml
<CustomObject>
    <description>Used to store the data from a specific payment/refund transaction (ex: authorization request or capture request and result)</description>
    <label>Gateway Transaction</label>
    <nameField>
        <displayFormat>GT-{0000000000}</displayFormat>
        <label>Gateway Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>