force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account corresponding to the gateway Transaction.</description>
    <inlineHelpText>The account corresponding to the gateway Transaction.</inlineHelpText>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gateway Transactions</relationshipLabel>
    <relationshipName>GatewayTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>