force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__AuthAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AuthAmount__c</fullName>
    <description>Authorized amount.</description>
    <inlineHelpText>Authorized amount.</inlineHelpText>
    <label>Auth Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>