force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__AuthAVSCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AuthAVSCode__c</fullName>
    <description>The auth avs code.</description>
    <inlineHelpText>The auth avs code.</inlineHelpText>
    <label>Auth AVS Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>