force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__AuthResponse__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AuthResponse__c</fullName>
    <description>The Auth response.</description>
    <inlineHelpText>The Auth response.</inlineHelpText>
    <label>Auth Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>