force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__CardExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CardExpirationMonth__c</fullName>
    <description>Expiration month of the card used.</description>
    <inlineHelpText>Expiration month of the card used.</inlineHelpText>
    <label>Card Expiration Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>