force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__CardExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CardExpirationYear__c</fullName>
    <description>Expiration year of the card used.</description>
    <inlineHelpText>Expiration year of the card used.</inlineHelpText>
    <label>Card Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>