force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__CardNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CardNumber__c</fullName>
    <description>Masked card number used.</description>
    <inlineHelpText>Masked card number used.</inlineHelpText>
    <label>Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>