force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__CardType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CardType__c</fullName>
    <description>Card type used in transaction.</description>
    <inlineHelpText>Card type used in transaction.</inlineHelpText>
    <label>Card Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>