force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__ECheckAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ECheckAccountNumber__c</fullName>
    <description>Masked eCheck account number.</description>
    <inlineHelpText>Masked eCheck account number.</inlineHelpText>
    <label>ECheck Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>