force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__GatewayDecision__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__GatewayDecision__c</fullName>
    <description>The response decision from the gateway.</description>
    <inlineHelpText>The response decision from the gateway.</inlineHelpText>
    <label>Gateway Decision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>