force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__GatewayMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__GatewayMessage__c</fullName>
    <description>The response message from the gateway.</description>
    <inlineHelpText>The response message from the gateway.</inlineHelpText>
    <label>Gateway Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>