force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Order Id.</description>
    <inlineHelpText>The associated Order Id.</inlineHelpText>
    <label>Order Id</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Gateway Transactions</relationshipLabel>
    <relationshipName>GatewayTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>