force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__PaymentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated payment id.</description>
    <inlineHelpText>The associated payment id.</inlineHelpText>
    <label>Payment Id</label>
    <referenceTo>Apttus_Billing__Payment__c</referenceTo>
    <relationshipLabel>Gateway Transactions</relationshipLabel>
    <relationshipName>GatewayTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>