force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment method used to process this request.</description>
    <inlineHelpText>The payment method used to process this request.</inlineHelpText>
    <label>Payment Method Id</label>
    <referenceTo>Apttus_Billing__PaymentMethod__c</referenceTo>
    <relationshipLabel>Gateway Transactions</relationshipLabel>
    <relationshipName>GatewayTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>