force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentMethodType__c</fullName>
    <description>Payment method type of the request.</description>
    <inlineHelpText>Payment method type of the request.</inlineHelpText>
    <label>Payment Method Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>