force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReasonCode__c</fullName>
    <description>The reason code.</description>
    <inlineHelpText>The reason code.</inlineHelpText>
    <label>Reason Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>