force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReferenceId__c</fullName>
    <description>Reference ID returned from Gateway.</description>
    <inlineHelpText>Reference ID returned from Gateway.</inlineHelpText>
    <label>Reference Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>