force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RefundId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RefundId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated refund id.</description>
    <inlineHelpText>The associated refund id.</inlineHelpText>
    <label>Refund Id</label>
    <referenceTo>Apttus_Billing__Refund__c</referenceTo>
    <relationshipLabel>Gateway Transactions</relationshipLabel>
    <relationshipName>GatewayTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>