force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RelatedAuthRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RelatedAuthRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the corresponding Auth Request.</description>
    <inlineHelpText>Link to the corresponding Auth Request.</inlineHelpText>
    <label>Related Auth Request Id</label>
    <referenceTo>Apttus_Billing__GatewayTransaction__c</referenceTo>
    <relationshipName>RelatedAuthRequests</relationshipName>
    <type>Lookup</type>
</CustomField>