force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RequestCurrency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RequestCurrency__c</fullName>
    <description>3 letter ISO currency code of the request.</description>
    <inlineHelpText>3 letter ISO currency code of the request.</inlineHelpText>
    <label>Request Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>