force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RequestDate__c</fullName>
    <description>The Date/Time when the request was sent to the gateway.</description>
    <inlineHelpText>The Date/Time when the request was sent to the gateway.</inlineHelpText>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>