force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RequestTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RequestTaxAmount__c</fullName>
    <description>The tax for the request amount</description>
    <inlineHelpText>The tax for the request amount</inlineHelpText>
    <label>Request Tax Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>