force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__RequestTokenId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RequestTokenId__c</fullName>
    <description>Request token id given by the Gateway.</description>
    <inlineHelpText>Request token id given by the Gateway.</inlineHelpText>
    <label>Request Token Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>