force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ResponseCode__c</fullName>
    <description>The response code from the gateway.</description>
    <inlineHelpText>The response code from the gateway.</inlineHelpText>
    <label>Response Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>