force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TransactionType__c</fullName>
    <description>The type of transaction.</description>
    <inlineHelpText>The type of transaction.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Payment Method Create</fullName>
            </value>
            <value>
                <fullName>Payment Method Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>