force-app/main/default/objects/Apttus_Billing__GatewayTransaction__c/fields/Apttus_Billing__UpdatedTokenId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UpdatedTokenId__c</fullName>
    <description>Updated Token Id by the gateway.</description>
    <inlineHelpText>Updated Token Id by the gateway.</inlineHelpText>
    <label>Updated Token Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>